2011-04-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The 'doc type version' and 'doc type read
	version' EBML header fields are only set to 3 if a stereo mode
	other than 'none' is used for at least one video track. Fix for
	bug 625.

	* mkvmerge: enhancement: File identification for tracks read from
	Matroska files with a codec ID of "A_MS/ACM" will show the track's
	format tag field if it is unknown to mkvmerge. Implements bug
	624.

2011-04-22  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Track, tag and attachment selection via
	--audio-tracks, --video-tracks etc. can have their meaning
	reversed by prefixing the list of IDs with "!". If it is then
	mkvmerge will copy all tracks/tags/attachments but the ones with
	the IDs given to the option (e.g. "--attachments !3,6").

	* mkvmerge: bug fix: Fixed handling AVIs with AAC audio format tag
	0x706d and bogus private data size. Fix for bug 623.

2011-04-20  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.7.0.

	* build system: For the time being the build system will always
	build and link statically against the internal versions of libEBML
	and libMatroska.

	* mkvmerge: bug fix: Fixed appending timecode calculation for
	appended subtitle tracks if the subtitle tracks are read from
	complex containers (e.g. Matroska, MP4, AVI etc). Fix for bug 620.

2011-04-15  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: Fixed extraction of MPEG-1/2 video tracks
	whose sequence headers change mid-stream but whose key frames are
	not all prefixed with a sequence header. Fix for bug 556.

	* mkvmerge: bug fix: Fixed reading AAC tracks from AVI files with
	7 bytes long codec data. Fix for bug 613.

	* mkvmerge: enhancement: Added support for WAV and AVI files that
	use a WAVEFORMATEXTENSIBLE structure (wFormatTag == 0xfffe). Fix
	for bug 614.

2011-04-14  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: The output file name extension will be updated on