@@ -139,3 +139,4 @@ T_289wav_unsupported_formattag:3:passed:20110314-133958:0.020701503
 T_290seven_bytes_aac_codec_data:d8680e35f0f6b595dce0fcb8af3b6e9e:passed:20110415-123546:0.125981629
 T_291waveformatextensible:wav-avi:passed:20110415-124159:0.057127293
 T_292avi_aac_706d_privsize_huge:7b34a92c34461e869834e7db0c63ab97:passed:20110422-152313:0.042857788
+T_293aac_adif_misdetected_as_video:3:passed:20110426-091956:0.02536219
