@@ -1,3 +1,8 @@
+2011-04-26  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: Fixed detection of AAC files with ADIF
+	headers. Fix for bug 626.
+
 2011-04-25  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge: bug fix: The 'doc type version' and 'doc type read
